--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,38 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
+.MainTable {
+  width: 990px;
+  caption-side: bottom;
+  border-collapse: collapse;
+  display: table;
+  text-indent: initial;
+  border-spacing: 2px;
+  border-color: grey;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #dee2e6;
+  border-radius: 0.375rem;
+  border: 1px solid black;
+}
+
+/*
+  //border-color-translucent: rgba(0, 0, 0, 0.175);
+
+    --bs-border-width: 1px;
+    --bs-border-style: solid;
+    --bs-border-color: #dee2e6;
+    --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
+    --bs-border-radius: 0.375rem;
+    --bs-border-radius-sm: 0.25rem;
+    --bs-border-radius-lg: 0.5rem;
+    --bs-border-radius-xl: 1rem;
+    --bs-border-radius-2xl: 2rem;
+    --bs-border-radius-pill: 50rem;
+*/
